compatibility-tests/compile-fail/tests/ui/duplication-backtrace-fields.stderr
error: Multiple `backtrace` attributes are not supported within a variant
  --> $DIR/duplication-backtrace-fields.rs:10:17
   |
10 |         #[snafu(backtrace)]
   |                 ^^^^^^^^^
